# backend

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  run_cache_list.sh
Debug/: makefile  sources.mk
Debug/src/: subdir.mk
Debug/src/comp/: subdir.mk
Debug/src/comp/array/: subdir.mk
Debug/src/comp/graphstore/: subdir.mk
Debug/src/comp/list/: subdir.mk
Debug/src/preproc/: subdir.mk
Debug/src/utility/: subdir.mk
data/: cfg_0  cfg_1  cfg_2  cfg_3  cfg_4  cfg_5  cfg_6  cfg_7  cfg_8  cfg_9  graphstore_0  graphstore_1  mirrors_shallow_0  mirrors_shallow_1  mirrors_shallow_2  mirrors_shallow_3  mirrors_shallow_4  mirrors_shallow_5  mirrors_shallow_6  mirrors_shallow_7  mirrors_shallow_8  mirrors_shallow_9  stmt_0  stmt_1  stmt_2  stmt_3  stmt_4  stmt_5  stmt_6  stmt_7  stmt_8  stmt_9
lib/: a.out  eclat
lib/file/: input_itemsets.txt  out_itemsets.txt  test
src/: backend.cpp  engine.cpp  myTimer.cpp  myTimer.h
src/common/: CommonLibs.hpp
src/comp/: EdgeArrayMap.cpp  EdgeArrayMap.h  FrequentItemsetStore.cpp  FrequentItemsetStore.h  art.cpp  art.h  art_array.cpp  art_array.h  art_linklist.cpp  art_linklist.h  buffer.h  cachestate.cpp  cachestate.h  cfg.cpp  cfg.h  cfg_compute.cpp  cfg_compute.h  cfg_compute_asyn.cpp  cfg_compute_asyn.h  cfg_compute_ooc.cpp  cfg_compute_ooc.h  cfg_compute_ooc_asyn.h  cfg_compute_ooc_syn.h  cfg_compute_ooc_syn_alias.h  cfg_compute_ooc_syn_alias_delta.h  cfg_compute_ooc_syn_alias_itemset.h  cfg_compute_ooc_syn_alias_naive.h  cfg_compute_ooc_syn_cache.h  cfg_compute_ooc_syn_cache_naive.h  cfg_compute_ooc_syn_delta.h  cfg_compute_ooc_syn_itemset.h  cfg_compute_ooc_syn_naive.h  cfg_compute_syn.cpp  cfg_compute_syn.h  cfg_compute_syn_alias.cpp  cfg_compute_syn_alias.h  cfg_compute_syn_alias_delta.h  cfg_compute_syn_alias_itemset.h  cfg_compute_syn_alias_naive.h  cfg_compute_syn_cache.h  (+45 more)
src/comp/array/: arraystomerge.cpp  arraystomerge.h
src/comp/concurrent_worklist/: concurrent_worklist.h  concurrent_workqueue.h  concurrent_workset.h
src/comp/graphstore/: FrequentItemsetStore.cpp  FrequentItemsetStore.h  art.cpp  art.h  art_array.cpp  art_array.h  art_linklist.cpp  art_linklist.h  buffer.h  delta_graph.h  delta_graphstore.h  delta_graphstore_alias.h  edge.h  fptree.cpp  fptree.hpp  graphstore.h  graphstore_alias.h  graphstore_cache.h  hybrid_graph.h  hybrid_graphstore.h  itemset_graph.h  itemset_graphstore.h  itemset_graphstore_alias.h  myarray.h  naive_graphstore.h  naive_graphstore_alias.h  naive_graphstore_cache.h
src/comp/list/: edgelist.cpp  edgelist.h  liststomerge.cpp  liststomerge.h
src/comp/partition_priority/: partition_priority.h  priority_array.h  priority_set.h
src/comp/stmt/: stmt.h  stmt_alloc.h  stmt_assign.h  stmt_call.h  stmt_calleefptr.h  stmt_callfptr.h  stmt_load.h  stmt_phi.h  stmt_ret.h  stmt_return.h  stmt_skip.h  stmt_store.h
src/preproc/: grammar.cpp  grammar.h  preprocess.h  scc_tarjan.cpp  scc_tarjan.hpp  singletons.h
src/test/: backend.cpp
src/testFile/: cfg  peg.txt  singleton.txt
src/utility/: FileUtil.hpp  IO_Manager.hpp  Logger.cpp  Logger.hpp  StaticPrinter.h  Timer.hpp  Timer_wrapper.h  Timer_wrapper_inmemory.h  Timer_wrapper_ooc.h  timer_diff.hpp  timer_sum.hpp  timer_sum_sync.hpp
